<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="147dp"
        android:text="@string/maintitle"
        android:textSize="40sp" />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginTop="211dp"
            android:text="@string/mainsubtitle" />

    <EditText
        android:id="@+id/editText"
        style="@android:style/Widget.DeviceDefault.Light.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mainhint"
        android:inputType="textPersonName" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="304dp"
        android:textOff="@string/toggleoff"
        android:textOn="@string/toggleon" />

    <Button
        android:id="@+id/haebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="302dp"
        android:text="@string/hae" />


</RelativeLayout>

